<resources>
    <string name="app_name">ActivityApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_to_friend">Send to Friend</string>
    <string name="random">Random</string>
    <string name="education">Education</string>
    <string name="recreational">Recreational</string>
    <string name="social">Social</string>
    <string name="charity">Charity</string>
    <string name="cooking">Cooking</string>
    <string name="music">Music</string>
</resources>
